updated plugin skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
-/.idea/
-
-/bin/*
-!/bin/.gitkeep
-
 /vendor/
 /node_modules/
 /composer.lock
 
 /etc/build/*
-!/etc/build/.gitkeep
+!/etc/build/.gitignore
 
 /tests/Application/yarn.lock
+
+/behat.yml
+/phpspec.yml
