--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "gweb/sylius-product-deposit-plugin",
     "type": "sylius-plugin",
+    "keywords": ["sylius", "sylius-plugin"],
     "description": "A Sylius plugin that allows deposit fees for products",
     "license": "MIT",
     "require": {
-        "php": "^7.1",
-        "sylius/sylius": "~1.2.0",
-        "symfony/symfony": "^3.4|^4.1"
+        "php": "^7.2",
+        "sylius/sylius": "^1.4"
     },
     "require-dev": {
         "behat/behat": "^3.4",
@@ -14,16 +14,31 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
-        "friends-of-behat/context-service-extension": "^1.2",
-        "friends-of-behat/cross-container-extension": "^1.1",
-        "friends-of-behat/service-container-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^1.2.1",
+        "friends-of-behat/page-object-extension": "^0.3",
+        "friends-of-behat/suite-settings-extension": "^1.0",
+        "friends-of-behat/symfony-extension": "^2.0",
         "friends-of-behat/variadic-extension": "^1.1",
         "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^4.0",
-        "phpstan/phpstan-shim": "^0.9.2",
+        "phpspec/phpspec": "^5.0",
+        "phpstan/phpstan-doctrine": "^0.10",
+        "phpstan/phpstan-shim": "^0.10",
+        "phpstan/phpstan-webmozart-assert": "^0.10",
         "phpunit/phpunit": "^6.5",
-        "sylius-labs/coding-standard": "^2.0"
+        "sensiolabs/security-checker": "^5.0",
+        "sylius-labs/coding-standard": "^2.0",
+        "symfony/browser-kit": "^3.4|^4.1",
+        "symfony/debug-bundle": "^3.4|^4.1",
+        "symfony/dotenv": "^4.2",
+        "symfony/intl": "^3.4|^4.1",
+        "symfony/web-profiler-bundle": "^3.4|^4.1",
+        "symfony/web-server-bundle": "^3.4|^4.1"
+    },
+    "conflict": {
+        "symfony/symfony": "4.1.8",
+        "symfony/browser-kit": "4.1.8",
+        "symfony/dependency-injection": "4.1.8",
+        "symfony/dom-crawler": "4.1.8",
+        "symfony/routing": "4.1.8"
     },
     "prefer-stable": true,
     "autoload": {
@@ -33,14 +48,11 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["tests/Application/app/AppKernel.php"]
+        "classmap": ["tests/Application/Kernel.php"]
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.5-dev"
         }
-    },
-    "config": {
-        "bin-dir": "bin"
     }
 }
