--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
          colors="true"
          bootstrap="tests/Application/config/bootstrap.php">
     <testsuites>
-        <testsuite name="GwebSyliusDepositPlugin Test Suite">
+        <testsuite name="GwebSyliusProductDepositPlugin Test Suite">
             <directory>tests</directory>
         </testsuite>
         <env name="APP_ENV" value="test"/>
