reset to default database url for test application

--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -13,7 +13,7 @@ APP_SECRET=EDITME
 # For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 #DATABASE_URL=mysql://root@127.0.0.1/sylius_%kernel.environment%?serverVersion=5.5
-DATABASE_URL=mysql://root:sylius@127.0.0.1:3606/sylius_%kernel.environment%?serverVersion=5.5
+DATABASE_URL=mysql://root@127.0.0.1/gweb_sylius_product_deposit_plugin_%kernel.environment%?serverVersion=5.5
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
