--- a/tests/Behat/Resources/services.yml
+++ b/tests/Behat/Resources/services.yml
@@ -1,12 +1,27 @@
 services:
     _defaults: { public: true }
 
-    gweb_product_deposit.behat.context.ui.admin.deposit:
+    gweb_product_deposit.behat.context.setup.product_deposit:
+        class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Context\Setup\ProductDepositContext
+        arguments:
+            - "@doctrine.orm.entity_manager"
+
+    gweb_product_deposit.behat.context.ui.admin.managing_product_variants:
         class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Context\Ui\Admin\ManagingProductVariantsContext
         arguments:
-            - "@gweb_product_deposit.behat.page.ui.admin.product_variant_update"
+            - "@gweb_product_deposit.behat.page.admin.product_variant.update"
 
-    gweb_product_deposit.behat.page.ui.admin.product_variant_update:
-        class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Page\Ui\Admin\ProductVariantUpdatePage
+    gweb_product_deposit.behat.context.ui.shop.product:
+        class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Context\Ui\Shop\ProductContext
+        arguments:
+            - "@gweb_product_deposit.behat.page.shop.product.show"
+
+    gweb_product_deposit.behat.page.admin.product_variant.update:
+        class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Page\Admin\ProductVariantUpdatePage
         parent: sylius.behat.page.admin.product_variant.update
+        public: false
+
+    gweb_product_deposit.behat.page.shop.product.show:
+        class: Tests\Gweb\SyliusProductDepositPlugin\Behat\Page\Shop\Product\ShowPage
+        parent: sylius.behat.page.shop.product.show
         public: false
