--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -8,16 +8,24 @@ default:
                 - sylius.behat.context.setup.channel
                 - sylius.behat.context.setup.product
                 - sylius.behat.context.setup.taxation
+                - sylius.behat.context.setup.zone
 
+                - sylius.behat.context.transform.channel
                 - sylius.behat.context.transform.lexical
                 - sylius.behat.context.transform.product
                 - sylius.behat.context.transform.product_variant
+                - sylius.behat.context.transform.shared_storage
+                - sylius.behat.context.transform.tax_category
+                - sylius.behat.context.transform.zone
 
-                #- sylius.behat.context.ui.admin.browsing_product_variants
                 - sylius.behat.context.ui.admin.managing_product_variants
                 - sylius.behat.context.ui.admin.notification
-                #- sylius.behat.context.ui.shop.browsing_product
+                - sylius.behat.context.ui.shop.cart
+                - sylius.behat.context.ui.shop.browsing_product
+                - sylius.behat.context.ui.shop.product
 
-                - gweb_product_deposit.behat.context.ui.admin.deposit
+                - gweb_product_deposit.behat.context.setup.product_deposit
+                - gweb_product_deposit.behat.context.ui.admin.managing_product_variants
+                - gweb_product_deposit.behat.context.ui.shop.product
             filters:
                 tags: "@managing_product_deposit && @ui"
