--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,74 +1,6 @@
-services:
-    # Admin product variant menu listener
-    gweb_deposit.listener.admin.product_variant.form.menu_builder:
-        class: Gweb\SyliusProductDepositPlugin\Menu\AdminProductVariantFormMenuListener
-        arguments: ['@sylius.theme.translation.theme_aware_translator.inner']
-        tags:
-            - { name: kernel.event_listener, event: sylius.menu.admin.product_variant.form, method: addItems }
-
-    # Admin product variant form extensions
-    gweb_deposit.form.extension.type.product_variant:
-        class: Gweb\SyliusProductDepositPlugin\Form\Extension\ProductVariantTypeExtension
-        tags:
-            - { name: form.type_extension, extended_type: Sylius\Bundle\ProductBundle\Form\Type\ProductVariantType, priority: -5 }
-
-    # Admin new deposit form type
-    gweb_deposit.form.type.channel_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Form\ChannelDepositType
-        arguments:
-            - '%gweb_deposit.model.channel_deposit.class%'
-            - ['sylius']
-        tags:
-            - { name: form.type}
-
-    # Template sonata product after price listener
-    gweb_deposit.block_event_listener.product.layout.after_header:
-        class: Sylius\Bundle\UiBundle\Block\BlockEventListener
-        arguments:
-            - '@@GwebSyliusProductDepositPlugin/Product/Show/_deposit.html.twig'
-        tags:
-            - { name: kernel.event_listener, event: sonata.block.event.sylius.shop.product.show.after_price, method: onBlockEvent }
-
-    # Template sonata javascript listener
-    gweb_deposit.block_event_listener.layout.javascripts:
-        class: Sylius\Bundle\UiBundle\Block\BlockEventListener
-        arguments:
-            - '@@GwebSyliusProductDepositPlugin/Product/Show/_deposit_javascript.html.twig'
-        tags:
-            - { name: kernel.event_listener, event: sonata.block.event.sylius.shop.layout.javascripts, method: onBlockEvent }
-
-    # Product variants deposits provider
-    gweb_deposit.provider.product_variants_deposits:
-        class: Gweb\SyliusProductDepositPlugin\Provider\ProductVariantsDepositsProvider
-
-    # Template helper
-    gweb_deposit.templating.helper.product_variants_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositHelper
-        arguments: ['@gweb_deposit.provider.product_variants_deposits']
-        tags:
-            - { name: templating.helper, alias: gweb_product_variants_deposit }
-
-    # Template twig extension
-    gweb_deposit.twig.extension.product_variants_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositExtension
-        arguments: ['@gweb_deposit.templating.helper.product_variants_deposit']
-        tags:
-            - { name: twig.extension }
-
-    # Order processor
-    gweb_deposit.order_processor.deposit:
-        class: Gweb\SyliusProductDepositPlugin\Services\OrderDepositProcessor
-        arguments: [
-            '@sylius.provider.channel_based_default_zone_provider',
-            '@sylius.zone_matcher',
-            '@gweb_deposit.taxation.order_deposit_taxes_applicator']
-        tags:
-            - { name: sylius.order_processor, priority: 0 }
-
-    # Order deposit tax applicator
-    gweb_deposit.taxation.order_deposit_taxes_applicator:
-        class: Gweb\SyliusProductDepositPlugin\Services\OrderDepositTaxesApplicator
-        arguments: [
-            '@sylius.tax_calculator',
-            '@sylius.factory.adjustment',
-            '@sylius.repository.tax_rate']
+imports:
+    - { resource: "services/event_listener.yml" }
+    - { resource: "services/form.yml" }
+    - { resource: "services/menu.yml" }
+    - { resource: "services/order.yml" }
+    - { resource: "services/twig.yml" }
