--- a/src/Resources/config/services/order.yml
+++ b/src/Resources/config/services/order.yml
@@ -2,7 +2,7 @@ services:
 
     # Order processor
     gweb_deposit.order_processor.deposit:
-        class: Gweb\SyliusProductDepositPlugin\Services\OrderDepositProcessor
+        class: Gweb\SyliusProductDepositPlugin\OrderProcessing\OrderDepositProcessor
         arguments: [
             '@sylius.provider.channel_based_default_zone_provider',
             '@sylius.zone_matcher',
@@ -12,7 +12,7 @@ services:
 
     # Order deposit tax applicator
     gweb_deposit.taxation.order_deposit_taxes_applicator:
-        class: Gweb\SyliusProductDepositPlugin\Services\OrderDepositTaxesApplicator
+        class: Gweb\SyliusProductDepositPlugin\Taxation\OrderDepositTaxesApplicator
         arguments: [
             '@sylius.tax_calculator',
             '@sylius.factory.adjustment',
