product variant mapping file only for distribution

--- a/src/Resources/config/doctrine/ProductVariant.orm.yml.dist
+++ b/src/Resources/config/doctrine/ProductVariant.orm.yml.dist
@@ -1,4 +1,4 @@
-Gweb\SyliusProductDepositPlugin\Entity\ProductVariant:
+App\Entity\Product\ProductVariant:
     type: entity
     table: sylius_product_variant
     manyToOne:
