--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,6 +4,7 @@ includes:
 
 parameters:
     reportUnmatchedIgnoredErrors: false
+    checkMissingIterableValueType: false
 
     excludes_analyse:
         # Makes PHPStan crash
@@ -15,4 +16,3 @@ parameters:
 
     ignoreErrors:
         - '/Parameter #1 $configuration of method Symfony\Component\DependencyInjection\Extension\Extension::processConfiguration() expects Symfony\Component\Config\Definition\ConfigurationInterface, Symfony\Component\Config\Definition\ConfigurationInterface|null given./'
-        - '/Parameter #2 $callable of class Twig\TwigFilter constructor expects callable|null, array<int, string|Symfony\Component\Templating\Helper\Helper> given./'
