--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
     - composer validate
 
     - vendor/bin/phpstan analyse -c phpstan.neon -l max src/
-    - vendor/bin/psalm
+    # - vendor/bin/psalm
 
     - vendor/bin/phpunit
     - vendor/bin/phpspec run
