--- a/src/Resources/config/services/twig.yml
+++ b/src/Resources/config/services/twig.yml
@@ -1,19 +1,19 @@
 services:
 
     # Product variants deposit provider
-    gweb_deposit.provider.product_variants_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Provider\ProductVariantsDepositsProvider
+    gewebe_sylius_product_deposit_plugin.provider.product_variants_deposit:
+        class: Gewebe\SyliusProductDepositPlugin\Provider\ProductVariantsDepositsProvider
 
     # Template helper
-    gweb_deposit.templating.helper.product_variants_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositHelper
-        arguments: ['@gweb_deposit.provider.product_variants_deposit']
+    gewebe_sylius_product_deposit_plugin.templating.helper.product_variants_deposit:
+        class: Gewebe\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositHelper
+        arguments: ['@gewebe_sylius_product_deposit_plugin.provider.product_variants_deposit']
         tags:
-            - { name: templating.helper, alias: gweb_product_variants_deposit }
+            - { name: templating.helper, alias: gewebe_product_variants_deposit }
 
     # Template twig extension
-    gweb_deposit.twig.extension.product_variants_deposit:
-        class: Gweb\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositExtension
-        arguments: ['@gweb_deposit.templating.helper.product_variants_deposit']
+    gewebe_sylius_product_deposit_plugin.twig.extension.product_variants_deposit:
+        class: Gewebe\SyliusProductDepositPlugin\Templating\Helper\ProductVariantsDepositExtension
+        arguments: ['@gewebe_sylius_product_deposit_plugin.templating.helper.product_variants_deposit']
         tags:
             - { name: twig.extension }
