--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -46,7 +46,7 @@ default:
         FriendsOfBehat\SymfonyExtension:
             bootstrap: tests/Application/config/bootstrap.php
             kernel:
-                class: Tests\Gweb\SyliusProductDepositPlugin\Application\Kernel
+                class: Tests\Gewebe\SyliusProductDepositPlugin\Application\Kernel
 
         FriendsOfBehat\VariadicExtension: ~
 
