--- a/src/Resources/config/services/menu.yml
+++ b/src/Resources/config/services/menu.yml
@@ -1,8 +1,8 @@
 services:
 
     # Admin product variant menu listener
-    gweb_deposit.listener.admin.product_variant.form.menu_builder:
-        class: Gweb\SyliusProductDepositPlugin\Menu\AdminProductVariantFormMenuListener
+    gewebe_sylius_product_deposit_plugin.listener.admin.product_variant.form.menu_builder:
+        class: Gewebe\SyliusProductDepositPlugin\Menu\AdminProductVariantFormMenuListener
         arguments: ['@sylius.theme.translation.theme_aware_translator.inner']
         tags:
             - { name: kernel.event_listener, event: sylius.menu.admin.product_variant.form, method: addItems }
