--- a/tests/Application/.env.test
+++ b/tests/Application/.env.test
@@ -1,3 +1,3 @@
 APP_SECRET='ch4mb3r0f5ecr3ts'
 
-KERNEL_CLASS='Tests\Gweb\SyliusProductDepositPlugin\Application\Kernel'
+KERNEL_CLASS='Tests\Gewebe\SyliusProductDepositPlugin\Application\Kernel'
