--- a/tests/Application/config/packages/doctrine.yaml
+++ b/tests/Application/config/packages/doctrine.yaml
@@ -21,5 +21,5 @@ doctrine:
                 is_bundle: false
                 type: annotation
                 dir: '%kernel.project_dir%/Entity'
-                prefix: 'Tests\Gweb\SyliusProductDepositPlugin\Application\Entity'
+                prefix: 'Tests\Gewebe\SyliusProductDepositPlugin\Application\Entity'
                 alias: App
