--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -24,8 +24,8 @@ default:
                 - sylius.behat.context.ui.shop.browsing_product
                 - sylius.behat.context.ui.shop.product
 
-                - gweb_product_deposit.behat.context.setup.product_deposit
-                - gweb_product_deposit.behat.context.ui.admin.managing_product_variants
-                - gweb_product_deposit.behat.context.ui.shop.product
+                - gewebe_sylius_product_deposit_plugin.behat.context.setup.product_deposit
+                - gewebe_sylius_product_deposit_plugin.behat.context.ui.admin.managing_product_variants
+                - gewebe_sylius_product_deposit_plugin.behat.context.ui.shop.product
             filters:
                 tags: "@managing_product_deposit && @ui"
