--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -1,10 +1,9 @@
 default:
     suites:
-        ui_managing_product_deposit:
+        ui_shop_product_deposit:
             contexts:
                 - sylius.behat.context.hook.doctrine_orm
 
-                - sylius.behat.context.setup.admin_security
                 - sylius.behat.context.setup.channel
                 - sylius.behat.context.setup.product
                 - sylius.behat.context.setup.taxation
@@ -13,19 +12,35 @@ default:
                 - sylius.behat.context.transform.channel
                 - sylius.behat.context.transform.lexical
                 - sylius.behat.context.transform.product
-                - sylius.behat.context.transform.product_variant
                 - sylius.behat.context.transform.shared_storage
                 - sylius.behat.context.transform.tax_category
                 - sylius.behat.context.transform.zone
 
-                - sylius.behat.context.ui.admin.managing_product_variants
-                - sylius.behat.context.ui.admin.notification
                 - sylius.behat.context.ui.shop.cart
                 - sylius.behat.context.ui.shop.browsing_product
                 - sylius.behat.context.ui.shop.product
 
                 - gewebe_sylius_product_deposit_plugin.behat.context.setup.product_deposit
-                - gewebe_sylius_product_deposit_plugin.behat.context.ui.admin.managing_product_variants
                 - gewebe_sylius_product_deposit_plugin.behat.context.ui.shop.product
+                - gewebe_sylius_product_deposit_plugin.behat.context.ui.shop.cart
+            filters:
+                tags: "@shop_product_deposit && @ui"
+        ui_managing_product_deposit:
+            contexts:
+                - sylius.behat.context.hook.doctrine_orm
+
+                - sylius.behat.context.setup.admin_security
+                - sylius.behat.context.setup.channel
+                - sylius.behat.context.setup.product
+                - sylius.behat.context.setup.taxation
+
+                - sylius.behat.context.transform.lexical
+                - sylius.behat.context.transform.product
+                - sylius.behat.context.transform.product_variant
+
+                - sylius.behat.context.ui.admin.managing_product_variants
+                - sylius.behat.context.ui.admin.notification
+
+                - gewebe_sylius_product_deposit_plugin.behat.context.ui.admin.managing_product_variants
             filters:
                 tags: "@managing_product_deposit && @ui"
